<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="qs_tiles_title">Tiles</string>
    <string name="qs_panel_title">Panel</string>
    <string name="qs_tile_title_visibility_title">QS tile titles</string>
    <string name="qs_tile_title_visibility_summary_on">QS tiles titles are now visible</string>
    <string name="qs_tile_title_visibility_summary_off">QS tiles titles are now gone</string>
    <string name="qs_settings_title">Quick Settings</string>
    <string name="notif_settings_title">Notifications</string>
    <string name="weather_header_category">Weather</string>
    <string name="button_settings">Buttons</string>
    <string name="qs_omnijaws_category">Weather QS tile</string>
    <string name="quicksettings_category">Quick settings</string>
    <string name="custom_header_cat">Header Image</string>
    <string name="music_category">Music</string>
    <string name="qs_easy_toggle_title">Advanced QS Easy Toggle</string>
    <string name="qs_easy_toggle_summary">Enable one tap action to enable/disable mobile data, wifi, location and bluetooth</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_visibility">Enable navigation bar</string>
    <string name="navigationbar_tab_title">Navigation</string>
    <string name="navigationbar_settings_title">Device Interaction</string>
    <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="info_pref_note_title">Note</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Default</string>
    <string name="reset">Reset</string>
    <string name="smartbar_doubletap_sleep_title">Double tap to sleep</string>
    <string name="smartbar_doubletap_sleep_summary">Double tap on navbar empty areas to switch off the screen</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="fling_settings">Fling settings</string>
    <string name="fling_interface">Fling</string>
    <string name="fling_enable_title">Enable Fling</string>
    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first</string>
    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar</string>
    <string name="fling_def_summary">No action set</string>
    <string name="fling_swipe_actions">Swipe gestures</string>
    <string name="fling_tap_actions">Tap gestures</string>
    <string name="fling_short_swipe_right">Right short swipe</string>
    <string name="fling_short_swipe_left">Left short swipe</string>
    <string name="fling_long_swipe_right">Right long swipe</string>
    <string name="fling_long_swipe_left">Left long swipe</string>
    <string name="fling_right_up_swipe">Right side swipe up</string>
    <string name="fling_left_up_swipe">Left side swipe up</string>
    <string name="fling_single_tap">Single tap right</string>
    <string name="fling_double_tap">Double tap right</string>
    <string name="fling_long_press">Long press right</string>
    <string name="fling_single_left_tap">Single tap left</string>
    <string name="fling_double_left_tap">Double tap left</string>
    <string name="fling_long_left_press">Long press left</string>
    <string name="long_swipe_portrait_title">Portrait</string>
    <string name="long_swipe_landscape_title">Landscape</string>
    <string name="portrait_right_swipe_title">Portrait right swipe</string>
    <string name="portrait_left_swipe_title">Portrait left swipe</string>
    <string name="landscape_right_swipe_title">Landscape right swipe</string>
    <string name="landscape_left_swipe_title">Landscape left swipe</string>
    <string name="vertical_up_swipe_title">Vertical up swipe</string>
    <string name="vertical_down_swipe_title">Vertical down swipe</string>
    <string name="up_swipe_title">Up swipe</string>
    <string name="down_swipe_title">Down swipe</string>
    <string name="long_swipe_reset">Reset</string>
    <string name="fling_advanced">Advanced</string>
    <string name="fling_long_swipe_title">Long swipe thresholds</string>
    <string name="fling_long_swipe_summary">Fine tune long swipe thresholds based on a percentage of Fling interface width or height</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
     <string name="powermenu_lockscreen_title">Power menu on lock screen</string>
     <string name="powermenu_lockscreen_summary">Show power menu on the lock screen</string>
    <string name="sysui_qqs_count_title">Small tiles number</string>
    <string name="lockscreen_qs_disabled_title">Disable QS On Secured Lockscreen</string>
    <string name="lockscreen_qs_disabled_summary">Requires and Automatically restarts interface</string>
    <string name="qs_footer_warnings_title">QS footer warnings</string>
    <string name="qs_footer_warnings_summary">Display a warning at bottom of QS panel when network is monitored by external apps or vpn</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="wakelockblocker_category">Wakelock Blocker</string>
    <string name="weather_config_title">Weather settings</string>
    <string name="weather_config_summary"></string>
    <string name="weather_icon_pack_title">Condition icon pack</string>
    <string name="status_bar_custom_header_title">Custom header image</string>
    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
    <string name="daylight_header_pack_title">Header image pack</string>
    <string name="status_bar_custom_header_shadow_title">Shadow header image</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="custom_header_provider_title">Header provider</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary">Long press on any image to use for static mode</string>
    <string name="lockscreen_shortcuts_title">Center screen Shortcuts</string>
    <string name="lockscreen_shortcuts_summary">Add center shortcuts on lockscreen</string>
    <string name="lockscreen_shorcuts_longpress_title">Shortcuts longpress</string>
    <string name="lockscreen_shorcuts_longpress_summary">Open custom lock screen shortcuts on longpress</string>
    <string name="lockscreen_colors_title">Colors</string>
    <string name="lockscreen_owner_info_color">Owner info</string>
    <string name="lockscreen_alarm_color">Alarm</string>
    <string name="lockscreen_clock_color">Clock</string>
    <string name="lockscreen_clock_date_color">Date</string>
    <string name="lockscreen_colors_reset_title">Reset lockscreen colors</string>
    <string name="hide_lockscreen_items_title">Items</string>
    <string name="hide_lockscreen_clock_title">Show lockscreen clock</string>
    <string name="hide_lockscreen_date_title">Show lockscreen date</string>
    <string name="screen_state_toggles_title">Suspend Actions</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="recents_settings_title">Recents</string>
    <string name="leds">LED Light Customization</string>
    <string name="powermenu_settings_title">Power menu</string>
    <string name="statusbar_settings_title">Status bar</string>
    <string name="lockscreen_torch_title">Lockscreen Torch</string>
    <string name="lockscreen_torch_summary">Press and hold the power button with the screen off to turn on flashlight</string>
    <string name="lockscreen_battery_info_title">Lockscreen Battery Info</string>
    <string name="lockscreen_battery_info_summary">Show battery info on bottom of lock screen</string>
    <string name="lockscreen_dt2s_title">Double Tap to Sleep</string>
    <string name="lockscreen_dt2s_summary">Double tap to sleep on lock screen</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="qs_settings_icon_title">Hide settings shortcut</string>
    <string name="qs_settings_icon_summary">Remove the settings shortcut in the extended statusbar</string>
    <string name="qs_running_services_title">Running Services Icon</string>
    <string name="qs_running_services_summary">Disable the tile running services icon in the header</string>
    <string name="qs_edit_title">Hide edit shortcut</string>
    <string name="qs_edit_summary">Remove the edit shortcut in the extended statusbar</string>
    <string name="qs_multiuser_switch_title">Hide multi-user shortcut</string>
    <string name="qs_multiuser_switch_summary">Remove the multi user shortcut in the extended statusbar</string>
    <string name="qs_expand_indicator_title">Hide expand indicator</string>
    <string name="qs_expand_indicator_summary">Remove the indicator used to expand or collpase the quick settings area</string>
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="lockscreen_visualizer_title">Display music visualizer</string>
    <string name="lockscreen_maxnotif_title">Lockscreen notification count</string>
    <string name="lockscreen_maxnotif_sumary">Enable adjustment of max lockscreen notifications</string>
    <string name="lockscreen_maxnotif_config">Max lockscreen notifications</string>
    <string name="qs_date_time_center_title">Pulldown Date and Time</string>
    <string name="qs_date_time_center_summary">Center: requires 1 or more icons to be disabled</string>
    <string name="fp_cat_title">Fingerprint Options</string>
    <string name="fp_keystore">FP Quick Unlock</string>
    <string name="fp_vibrate">FP Vibrate on Unlock</string>
    <string name="animations_title">Transition Animations</string>
    <string name="blur_settings">Blur Personalizations</string>
</resources>