<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The ABC rom
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.deso.settings.preferences.CustomSeekBarPreference
        android:key="sysui_qqs_count_key"
        android:title="@string/sysui_qqs_count_title"
        settings:max="8"
        settings:min="3"
        settings:units=""
        android:persistent="false" />

    <com.android.settings.preference.SecureSettingSwitchPreference
        android:key="qs_easy_toggle"
        android:title="@string/qs_easy_toggle_title"
        android:summary="@string/qs_easy_toggle_summary"
        android:defaultValue="false" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="qs_footer_warnings"
        android:title="@string/qs_footer_warnings_title"
        android:summary="@string/qs_footer_warnings_summary"
        android:defaultValue="true" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="qs_tile_title_visibility"
        android:title="@string/qs_tile_title_visibility_title"
        android:summaryOn="@string/qs_tile_title_visibility_summary_on"
        android:summaryOff="@string/qs_tile_title_visibility_summary_off"
        android:defaultValue="true" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="qs_settings_icon_toggle"
        android:title="@string/qs_settings_icon_title"
        android:summary="@string/qs_settings_icon_summary"
        android:disableDependentsState="true"
        android:defaultValue="false" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="qs_running_services_toggle"
        android:title="@string/qs_running_services_title"
        android:summary="@string/qs_running_services_summary"
        android:defaultValue="false" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="qs_edit_toggle"
        android:title="@string/qs_edit_title"
        android:summary="@string/qs_edit_summary"
        android:defaultValue="false" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="qs_multiuser_switch_toggle"
        android:title="@string/qs_multiuser_switch_title"
        android:summary="@string/qs_multiuser_switch_summary"
        android:defaultValue="false" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="qs_expand_indicator_toggle"
        android:title="@string/qs_expand_indicator_title"
        android:summary="@string/qs_expand_indicator_summary"
        android:defaultValue="false" />

    <ListPreference
        android:key="qs_date_time_center"
        android:title="@string/qs_date_time_center_title"
        android:summary="@string/qs_date_time_center_summary"
        android:entries="@array/qs_date_time_entries"
        android:entryValues="@array/qs_date_time_values"
        android:persistent="false" />

    <ListPreference
        android:key="quick_pulldown"
        android:title="@string/quick_pulldown_title"
        android:entries="@array/quick_pulldown_entries"
        android:entryValues="@array/quick_pulldown_values"
        android:persistent="false" />

    <ListPreference
        android:key="smart_pulldown"
        android:title="@string/smart_pulldown_title"
        android:entries="@array/smart_pulldown_entries"
        android:entryValues="@array/smart_pulldown_values"
        android:persistent="false" />

    <PreferenceCategory
        android:title="@string/qs_omnijaws_category">

        <PreferenceScreen
        android:title="@string/weather_config_title"
        android:summary="@string/weather_config_summary" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.omnirom.omnijaws"
                android:targetClass="org.omnirom.omnijaws.SettingsActivityService" />
        </PreferenceScreen>

        <ListPreference
        android:key="weather_icon_pack"
        android:title="@string/weather_icon_pack_title"
        android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/custom_header_cat">

        <com.android.settings.preference.SystemSettingSwitchPreference
            android:key="status_bar_custom_header"
            android:title="@string/status_bar_custom_header_title"
            android:summary="@string/status_bar_custom_header_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="custom_header_provider"
            android:title="@string/custom_header_provider_title"
            android:persistent="false"
            android:entries="@array/custom_header_provider_entries"
            android:entryValues="@array/custom_header_provider_values"
            android:dependency="status_bar_custom_header" />

        <ListPreference
            android:key="daylight_header_pack"
            android:title="@string/daylight_header_pack_title"
            android:persistent="false"
            android:dependency="status_bar_custom_header"/>

        <com.deso.settings.preferences.CustomSeekBarPreference
            android:key="status_bar_custom_header_shadow"
            android:title="@string/status_bar_custom_header_shadow_title"
            android:summary="@string/status_bar_custom_header_shadow_summary"
            settings:max="255"
            settings:min="0"
            settings:units=""
            android:persistent="false"
            android:dependency="status_bar_custom_header" />

        <PreferenceScreen
            android:key="custom_header_browse"
            android:title="@string/custom_header_browse_title"
            android:summary="@string/custom_header_browse_summary"
            android:dependency="status_bar_custom_header"
            android:persistent="false" >
                <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.omnirom.omnistyle"
                    android:targetClass="org.omnirom.omnistyle.BrowseHeaderActivity" />
    </PreferenceScreen>

     </PreferenceCategory>

</PreferenceScreen>
