<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 Desolation ROM

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:key="ls_preferences">

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="keyguard_toggle_torch"
        android:title="@string/lockscreen_torch_title"
        android:summary="@string/lockscreen_torch_summary" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_lock_screen"
        android:title="@string/lockscreen_dt2s_title"
        android:summary="@string/lockscreen_dt2s_summary" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="lockscreen_media_metadata"
        android:title="@string/media_art_title"
        android:summary="@string/media_art_summary"
        android:defaultValue="true" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="power_menu_lockscreen"
        android:title="@string/powermenu_lockscreen_title"
        android:summary="@string/powermenu_lockscreen_summary"
        android:defaultValue="true" />

    <com.android.settings.preference.SecureSettingSwitchPreference
        android:key="lockscreen_qs_disabled"
        android:title="@string/lockscreen_qs_disabled_title"
        android:summary="@string/lockscreen_qs_disabled_summary" />

        <!-- Hide Lockscreen clock & date -->
    <PreferenceCategory
        android:key="hide_lockscreen_items_category"
        android:title="@string/hide_lockscreen_items_title" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="hide_lockscreen_clock"
        android:title="@string/hide_lockscreen_clock_title"
        android:defaultValue="true" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="hide_lockscreen_date"
        android:title="@string/hide_lockscreen_date_title"
        android:defaultValue="true" />


    <!-- FP Unlock Options -->
    <PreferenceCategory
            android:key="fp_ls_category"
            android:title="@string/fp_cat_title" >


        <com.android.settings.preference.SystemSettingSwitchPreference
            android:key="fp_unlock_keystore"
            android:title="@string/fp_keystore"
            android:defaultValue="false" />


        <com.android.settings.preference.SystemSettingSwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fp_vibrate"
            android:defaultValue="false" />

    </PreferenceCategory>


    <!-- Lockscreen colors -->
    <PreferenceCategory
            android:key="lockscreen_colors_category"
            android:title="@string/lockscreen_colors_title" >

        <com.android.settings.preference.ColorPickerPreference
            android:key="lockscreen_owner_info_color"
            android:title="@string/lockscreen_owner_info_color"
            android:defaultValue="0xffffffff" />

        <com.android.settings.preference.ColorPickerPreference
            android:key="lockscreen_alarm_color"
            android:title="@string/lockscreen_alarm_color"
            android:defaultValue="0xffffffff" />

        <com.android.settings.preference.ColorPickerPreference
            android:key="lockscreen_clock_color"
            android:title="@string/lockscreen_clock_color"
            android:dependency="hide_lockscreen_clock"
            android:defaultValue="0xffffffff" />

        <com.android.settings.preference.ColorPickerPreference
            android:key="lockscreen_clock_date_color"
            android:title="@string/lockscreen_clock_date_color"
            android:defaultValue="0xffffffff" />

        <Preference
            android:key="lockscreen_colors_reset"
            android:title="@string/lockscreen_colors_reset_title" />

    </PreferenceCategory>

    <PreferenceScreen
        android:key="lockscreen_shortcuts"
        android:fragment="com.deso.settings.dslv.ActionListViewSettings"
        android:summary="@string/lockscreen_shortcuts_summary"
        android:title="@string/lockscreen_shortcuts_title">
            <extra android:name="actionMode" android:value="4" />
            <extra android:name="maxAllowedActions" android:value="5" />
            <extra android:name="disableLongpress" android:value="true" />
            <extra android:name="useAppPickerOnly" android:value="true" />
    </PreferenceScreen>

    <SwitchPreference
        android:key="lockscreen_shortcuts_longpress"
        android:title="@string/lockscreen_shorcuts_longpress_title"
        android:summary="@string/lockscreen_shorcuts_longpress_summary" />

    <PreferenceCategory
        android:key="lockscreen_ui_music_category"
        android:title="@string/music_category">

    <com.android.settings.preference.SecureSettingSwitchPreference
        android:key="lockscreen_visualizer"
        android:title="@string/lockscreen_visualizer_title"
        android:defaultValue="true"/>

    </PreferenceCategory>

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="lock_screen_custom_notif"
        android:title="@string/lockscreen_maxnotif_title"
        android:summary="@string/lockscreen_maxnotif_sumary"
        android:defaultValue="false" />

 <com.deso.settings.preferences.CustomSeekBarPreference
        android:key="lockscreen_max_notif_config"
        android:title="@string/lockscreen_maxnotif_config"
        settings:max="8"
        settings:min="3"
        android:dependency="lock_screen_custom_notif" />

</PreferenceScreen>

