<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The ABC rom
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.deso.settings.preferences.CustomSeekBarPreference
        android:key="sysui_qqs_count_key"
        android:title="@string/sysui_qqs_count_title"
        settings:max="8"
        settings:min="3"
        settings:units=""
        android:persistent="false" />

    <com.android.settings.preference.SecureSettingSwitchPreference
        android:key="qs_easy_toggle"
        android:title="@string/qs_easy_toggle_title"
        android:summary="@string/qs_easy_toggle_summary"
        android:defaultValue="false" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="qs_footer_warnings"
        android:title="@string/qs_footer_warnings_title"
        android:summary="@string/qs_footer_warnings_summary"
        android:defaultValue="true" />

    <com.android.settings.preference.SystemSettingSwitchPreference
        android:key="qs_tile_title_visibility"
        android:title="@string/qs_tile_title_visibility_title"
        android:summaryOn="@string/qs_tile_title_visibility_summary_on"
        android:summaryOff="@string/qs_tile_title_visibility_summary_off"
        android:defaultValue="true" />

    <PreferenceCategory
        android:title="@string/qs_omnijaws_category">

        <PreferenceScreen
        android:title="@string/weather_config_title"
        android:summary="@string/weather_config_summary" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.omnirom.omnijaws"
                android:targetClass="org.omnirom.omnijaws.SettingsActivityService" />
        </PreferenceScreen>

        <ListPreference
        android:key="weather_icon_pack"
        android:title="@string/weather_icon_pack_title"
        android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
