<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Pure Nexus Project
     Copyright (C) 2017 Desolation ROM

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
        android:title="@string/deso_settings_title" >

    <PreferenceScreen
            android:fragment="com.deso.settings.tabs.StatusBarTab"
            android:key="deso_statusbar_settings"
            android:title="@string/statusbar_settings_title"/>

    <PreferenceScreen
            android:fragment="com.deso.settings.tabs.NavTab"
            android:key="deso_navbar_settings"
            android:title="@string/navigationbar_settings_title"/>

    <PreferenceScreen
            android:fragment="com.deso.settings.fragments.PowerMenuSettings"
            android:key="deso_powermenu_settings"
            android:title="@string/powermenu_settings_title"/>

    <PreferenceScreen
            android:fragment="com.deso.settings.tabs.QSTab"
            android:key="deso_qs_settings"
            android:title="@string/qs_settings_title"/>

    <PreferenceScreen
            android:fragment="com.deso.settings.tabs.NotifTab"
            android:key="deso_notif_settings"
            android:title="@string/notif_settings_title"/>

    <PreferenceScreen
            android:fragment="com.deso.settings.tabs.MiscTab"
            android:key="deso_misc_settings"
            android:title="@string/misc_settings_title"/>


<!--  Update this line as we complete them

    <PreferenceScreen
            android:fragment="com.deso.settings.tabs.LockScreenTab"
            android:key="deso_statusbar_settings"
            android:title="@string/statusbar_settings_title"/> -->


    <PreferenceScreen
            android:fragment="com.deso.settings.fragments.RecentsSettings"
            android:key="deso_recents_settings"
            android:title="@string/recents_settings_title"/>

<!-- TODO: These sections will be moved later -->

    <PreferenceScreen
            android:fragment="com.deso.settings.fragments.LedSettings"
            android:key="deso_leds"
            android:title="@string/leds"/>
<!-- sections to move --> 

    <PreferenceScreen
        android:key="blur_category"
        android:title="@string/blur_settings"
        android:fragment="com.deso.settings.fragments.BlurPersonalizations" />

</PreferenceScreen>
