<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 Desolation ROM

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- Lockscreen colors -->
    <PreferenceCategory
            android:key="lockscreen_colors_category"
            android:title="@string/lockscreen_colors_title" >

        <com.android.settings.preference.ColorPickerPreference
            android:key="lockscreen_owner_info_color"
            android:title="@string/lockscreen_owner_info_color"
            android:defaultValue="0xffffffff" />

        <com.android.settings.preference.ColorPickerPreference
            android:key="lockscreen_alarm_color"
            android:title="@string/lockscreen_alarm_color"
            android:defaultValue="0xffffffff" />

        <com.android.settings.preference.ColorPickerPreference
            android:key="lockscreen_clock_color"
            android:title="@string/lockscreen_clock_color"
            android:defaultValue="0xffffffff" />

        <com.android.settings.preference.ColorPickerPreference
            android:key="lockscreen_clock_date_color"
            android:title="@string/lockscreen_clock_date_color"
            android:defaultValue="0xffffffff" />

    </PreferenceCategory>

</PreferenceScreen>

